[package]
name = "kraken-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# totp-lite = "1.0.3"
ta = "0.5.0"
# krakenrs = "5.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
sha2 = "0.9.2"
hmac = "0.10"
base64 = "0.13"
